overlap in skills page resolved

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -82,7 +82,7 @@ nav {
 
     a.skills-link{
         &:after{
-          content: 'SKILLS';  
+          content: 'PROJECTS';  
         }
     }
 
