--- a/src/components/Skill/Project/index.scss
+++ b/src/components/Skill/Project/index.scss
@@ -1,177 +1,85 @@
-.healthNGO{
-  width: 300px;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  margin: 20px;
-  left: 170%;
-  top: -10%;
-  position: absolute;
-  opacity: 0;
-  animation: fadeInRight 0.5s 1s forwards;
-
-  &:hover{
+// Define a placeholder selector to reuse common styles
+.card{
+  display: flex;
+  flex-wrap: wrap;
+  // justify-content: space-between;
+  // gap: 0px;
+  align-items: center;
+  justify-content: center;
+  
+  // gap: 50px 100px;
+  // width: 120%;
+  position: relative;
+  %card-styles {
+    // width: 50%;
+    background-color: #fff;
+    border-radius: 3%;
+    box-shadow: 0 0 4% rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    margin: 4%;
+    opacity: 0;
+    transition: box-shadow 0.3s ease-in-out;
+    // position: absolute;
+  
+    &:hover {
       box-shadow: 0 0 20px 0px lightyellow;
       cursor: pointer;
-  }
-
-  .card-image {
-      width: 100%;
+    }
+  
+    .card-image {
+      width: 270px;
       height: 150px;
       background-size: cover;
       background-position: center;
     }
-    
+  
     .card-content {
       padding: 10px;
-
+  
       .card-title {
-          font-size: 20px;
-          font-weight: bold;
-          margin-bottom: 8px;
+        font-size: 180%;
+        font-weight: bold;
+        margin-bottom: 8px;
       }
-
+  
       .card-link {
-          display: block;
-          margin-top: 16px;
-          text-decoration: none;
-          color: #3498db;
-          font-weight: bold;
-          transition: color 0.3s ease-in-out;
-        
-          &:hover {
-            color: #1f6fd3;
-          }
+        display: inline;
+        margin-right: 10%;
+        text-decoration: none;
+        color: #3498db;
+        font-weight: bold;
+        transition: color 0.3s ease-in-out;
+  
+        &:hover {
+          color: #1f6fd3;
         }
+      }
     }
-    
-    
-    
-  //   .card-description {
-  //     font-size: 14px;
-  //     color: #555;
-  //     line-height: 1.4;
-  //   }
-    
-}
-
-.ThaiOCRApp{
-    width: 300px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    margin: 20px;
-    left: 110%;
-    top: -10%;
-    position: absolute;
-    opacity: 0;
+  }
+  
+  .healthNGO {
+    @extend %card-styles;
+    // grid-column-start: 1;
+    // left: 170%;
+    // top: -10%;
+    animation: fadeInRight 0.5s 1s forwards;
+  }
+  
+  .ThaiOCRApp {
+    @extend %card-styles;
+    // grid-column-start: 2;
+    // left: 110%;
+    // top: -10%;
     animation: fadeInLeft 0.5s 2s forwards;
-
-    &:hover{
-        box-shadow: 0 0 20px 0px lightyellow;
-        cursor: pointer;
-    }
-
-    .card-image {
-        width: 100%;
-        height: 150px;
-        background-size: cover;
-        background-position: center;
-      }
-      
-      .card-content {
-        padding: 10px;
-
-        .card-title {
-            font-size: 20px;
-            font-weight: bold;
-            margin-bottom: 8px;
-        }
-
-        .card-link {
-            display: block;
-            margin-top: 16px;
-            text-decoration: none;
-            color: #3498db;
-            font-weight: bold;
-            transition: color 0.3s ease-in-out;
-          
-            &:hover {
-              color: #1f6fd3;
-            }
-          }
-      }
-      
-      
-      
-    //   .card-description {
-    //     font-size: 14px;
-    //     color: #555;
-    //     line-height: 1.4;
-    //   }
-      
   }
-
-  .WebGLGame{
-    width: 300px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    margin: 20px;
-    left: 143%;
-    top:220%;
-    position: absolute;
-    opacity: 0;
+  
+  .WebGLGame {
+    @extend %card-styles;
+    // grid-column-start: 1;
+    // grid-row-start: ;
+    // left: 143%;
+    // top: 220%;
     animation: fadeInUp 0.5s 3s forwards;
-
-    &:hover{
-        box-shadow: 0 0 20px 0px lightyellow;
-        cursor: pointer;
-    }
-
-    .card-image {
-        width: 100%;
-        height: 150px;
-        background-size: cover;
-        background-position: center;
-      }
-      
-      .card-content {
-        padding: 10px;
-
-        .card-title {
-            font-size: 20px;
-            font-weight: bold;
-            margin-bottom: 8px;
-        }
-
-        .card-link {
-            display: block;
-            margin-top: 16px;
-            text-decoration: none;
-            color: #3498db;
-            font-weight: bold;
-            transition: color 0.3s ease-in-out;
-          
-            &:hover {
-              color: #1f6fd3;
-            }
-          }
-      }
-      
-      
-      
-    //   .card-description {
-    //     font-size: 14px;
-    //     color: #555;
-    //     line-height: 1.4;
-    //   }
-      
   }
-
   
-  
-  
+}
