--- a/src/components/Skill/index.scss
+++ b/src/components/Skill/index.scss
@@ -1,3 +1,19 @@
+// .container{
+//   display: flex-ta;
+//   .text-zone{
+//     flex: 60%;
+//     // order: 1
+//   }
+  .project{
+    display: flex;
+    // order: 2;
+    // flex: 40%;
+
+    float: right;
+    width: 50%;
+  }
+// }
+
 .contact-button{
   color: #ffd700;
   font-size: 13px;
@@ -7,7 +23,8 @@
   text-decoration: none;
   padding: 10px 18px;
   border: 1px solid #ffd700;
-  margin-top: 150px;
+  margin-top: 20%;
+  // margin-left: 30px;
   // bottom: 20%;
   position: absolute;
   float: left;
@@ -18,6 +35,13 @@
       background: #ffd700;
       color: #333;
   }
+}
+
+.gif{
+  position: absolute;
+  margin-top: -40px;
+  margin-right: 20px;
+  animation: fadeIn 3s 1s forwards;
 }
 
 // .skills-text {
