--- a/src/components/Skill/typeAnimation/index.scss
+++ b/src/components/Skill/typeAnimation/index.scss
@@ -1,9 +1,11 @@
 .skillset-container{
     // float: left;
-    position: absolute;
-    margin: 20px;
-    left: 10%;
-    top: 30%;
+    position: relative;
+    margin-top: 100px;
+    width: 110%;
+    // margin-top: 10%;
+    // left: 10%;
+    // top: 30%;
     .type-animation-wrapper{
         font-size: 50px;
         font-family: 'Coolvetica';
